--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 0, 9, 3, 0
+FILEVERSION 0, 9, 5, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "0.9.4\000"
+			VALUE "FileVersion", "0.9.5\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "0.9.4\000"
+			VALUE "ProductVersion", "0.9.5\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -24,9 +24,9 @@ FILETYPE VFT_APP {
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_ADDEDIT DIALOGEX 50,50,500,300
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Add/edit table/view/index/trigger"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Add/edit table/view/index/trigger"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	CONTROL "",IDC_DLG_EDITOR, "RICHEDIT50W", WS_VISIBLE | ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP | ES_NOHIDESEL | WS_CHILD,1,1,498,273,WS_EX_STATICEDGE
 	PUSHBUTTON "Example",IDC_DLG_EXAMPLE,5,282,50,14, WS_TABSTOP | NOT WS_VISIBLE
@@ -36,9 +36,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_ROW DIALOGEX 50,50,300,300
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Add/Edit/View row"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Add/Edit/View row"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "ListViewHandle", IDC_DLG_USERDATA, 0,0,0,0, WS_CHILD
 	PUSHBUTTON "OK",IDC_DLG_OK,0,0,60,14, WS_TABSTOP
@@ -47,9 +47,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_ADD_TABLE DIALOGEX 50,50,230,200
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Add table"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Add table"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Name", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
 	EDITTEXT IDC_DLG_TABLENAME, 40, 5, 153, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD
@@ -69,9 +69,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_ADD_COLUMN DIALOGEX 50,50,135,150
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Add column"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Add column"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Name", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
 	EDITTEXT IDC_DLG_COLNAME, 40, 5, 90, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD
@@ -97,9 +97,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_QUERYLIST DIALOGEX 50,50,500,300
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
- CAPTION "History/Gists/Examples and EditData"
- FONT 10, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	CAPTION "History/Gists/Examples and EditData"
+	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	PUSHBUTTON  "+", IDC_DLG_QUERYADD,0,0,18,10, WS_CHILD | BS_FLAT | NOT WS_VISIBLE | WS_TABSTOP
 	EDITTEXT    IDC_DLG_QUERYFILTER,0,0,300,10,WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
@@ -108,9 +108,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_SETTINGS DIALOGEX 50,50,200,130
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Settings"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Settings"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT           "Font", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
     COMBOBOX        IDC_DLG_FONT_FAMILY, 35, 5, 125, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -129,9 +129,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_TOOL_IMPORT_CSV DIALOGEX 50,50,182,160
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Import data from CSV file"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Import data from CSV file"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT           "Table name", IDC_DLG_LABEL, 5, 7, 40, 14, SS_LEFT
     EDITTEXT        IDC_DLG_TABLENAME, 45, 5, 130, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD
@@ -149,9 +149,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_TOOL_EXPORT_SQL DIALOGEX 50,50,174,120
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Export structure and data to SQL file"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Export structure and data to SQL file"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	CONTROL "", IDC_DLG_OBJECTLIST, WC_LISTVIEW, WS_VISIBLE | WS_TABSTOP | WS_CHILD | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS,5,5, 165, 70, WS_EX_STATICEDGE
 
@@ -165,9 +165,9 @@ END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_TOOL_EXPORT_CSV DIALOGEX 50,50,174,100
- STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
- CAPTION "Export data of table/view to CSV file"
- FONT 8, "MS Shell Dlg", 400, 0, 0x1
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Export data of table/view to CSV file"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     COMBOBOX        IDC_DLG_TABLENAME, 5, 5, 165, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_SORT
     AUTOCHECKBOX    "Column names in first line", IDC_DLG_ISCOLUMNS, 5, 20, 139, 16, BS_NOTIFY
@@ -319,6 +319,8 @@ BEGIN
 	BEGIN
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM SEPARATOR
+		MENUITEM "Export to csv", IDM_RESULT_EXPORT
 	END
 END
 
@@ -356,7 +358,8 @@ BEGIN
 		"* During a transaction the special indicator is displayed inside the status bar\n\n" \
 		"* Do you need a new version of sqlite or a standard extension like json1?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
 		"* Use Tab button to toggle to next result\n\n" \
-		"* Hold Ctrl when click by a cell in Data Edit dialog to edit the value as a multiline text. Use Ctrl + Enter to add new line.\n\n" \
+		"* Hold Ctrl when click by a cell in Data Edit dialog to edit the value as a multiline text. Use Ctrl + Enter to add new line to text.\n\n" \
+		"* Use Ctrl + Enter to add row in Add row dialog\n\n" \
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows remove/reorder column to an existing table or something like this.\n\n" \
 		"Cons\n* BLOB is unsupported\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit"
 END
