--- a/sqlite-gui.cbp
+++ b/sqlite-gui.cbp
@@ -40,6 +40,7 @@
 				<Linker>
 					<Add option="-s" />
 					<Add library="lib/libsqlite3.a" />
+					<Add library="C:/Program Files (x86)/CodeBlocks/MinGW/lib/libcomdlg32.a" />
 				</Linker>
 			</Target>
 		</Build>
