--- a/src/resource.rc
+++ b/src/resource.rc
@@ -4,15 +4,15 @@
 #include "resource.h"
 
 1 VERSIONINFO
-FILEVERSION 0, 9, 6, 0
+FILEVERSION 0, 9, 7, 0
 FILEOS VOS_DOS_WINDOWS32
 FILETYPE VFT_APP {
 	BLOCK "StringFileInfo" {
 		BLOCK "040904E4" {
 			VALUE "FileDescription", "SQLite GUI\000"
-			VALUE "FileVersion", "0.9.6\000"
+			VALUE "FileVersion", "0.9.7\000"
 			VALUE "ProductName", "sqlite-gui\000"
-			VALUE "ProductVersion", "0.9.6\000"
+			VALUE "ProductVersion", "0.9.7\000"
 			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
@@ -25,7 +25,7 @@ FILETYPE VFT_APP {
 LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_ADDEDIT DIALOGEX 50,50,500,300
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
-	CAPTION "Add/edit table/view/index/trigger"
+	CAPTION "Edit table/view; Add/edit index/trigger"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	CONTROL "",IDC_DLG_EDITOR, "RICHEDIT50W", WS_VISIBLE | ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP | ES_NOHIDESEL | WS_CHILD,1,1,498,273,WS_EX_STATICEDGE
@@ -96,18 +96,28 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_QUERYLIST DIALOGEX 50,50,500,300
+IDD_EDITDATA DIALOGEX 50,50,500,300
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
-	CAPTION "History/Gists/Examples and EditData"
+	CAPTION "View/Edit table data"
 	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	PUSHBUTTON  "+", IDC_DLG_QUERYADD,0,0,18,10, WS_CHILD | BS_FLAT | NOT WS_VISIBLE | WS_TABSTOP
-	EDITTEXT    IDC_DLG_QUERYFILTER,0,0,300,10,WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
-	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VISIBLE | WS_VSCROLL | WS_TABSTOP | WS_CHILD | LVS_REPORT | LVS_NOSORTHEADER | LVS_SINGLESEL | LVS_SHOWSELALWAYS,0, 10, 400, 80, WS_EX_STATICEDGE
+	PUSHBUTTON  "+", IDC_DLG_ROW_ADD,0,0,18,10, WS_CHILD | BS_FLAT | WS_VISIBLE
+	EDITTEXT    IDC_DLG_QUERYFILTER,20,0,300,10,WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
+	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VISIBLE | WS_VSCROLL | WS_TABSTOP | WS_CHILD | LVS_REPORT,0, 10, 400, 80, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50,50,200,130
+IDD_QUERYLIST DIALOGEX 50,50,500,300
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	CAPTION "History and Gists"
+	FONT 10, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	EDITTEXT    IDC_DLG_QUERYFILTER,0,0,300,10,WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD, 0
+	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VISIBLE | WS_VSCROLL | WS_TABSTOP | WS_CHILD | LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER,0, 10, 400, 80, WS_EX_STATICEDGE
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_SETTINGS DIALOGEX 50,50,200,160
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -119,11 +129,16 @@ BEGIN
 	AUTOCHECKBOX    "Autoload extensions", IDC_DLG_AUTOLOAD, 5, 20, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX    "Open last database on start up", IDC_DLG_RESTORE_DB, 5, 35, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX    "Restore editor's text on start up", IDC_DLG_RESTORE_EDITOR, 5, 50, 180, 16, BS_NOTIFY
-	AUTOCHECKBOX    "Editor highlighter (UNDO is broken)", IDC_DLG_USE_HIGHLIGHT, 5, 65, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX    "Editor highlighter", IDC_DLG_USE_HIGHLIGHT, 5, 65, 180, 16, BS_NOTIFY
 	AUTOCHECKBOX    "Unsafe renaming (pragma legacy_alter_table = 1)", IDC_DLG_USE_LEGACY, 5, 80, 180, 16, BS_NOTIFY
+	AUTOCHECKBOX    "App exit by escape", IDC_DLG_EXIT_BY_ESCAPE, 5, 95, 180, 16, BS_NOTIFY
 
-	PUSHBUTTON "OK",IDC_DLG_OK,70,110,60,14,WS_TABSTOP
-    PUSHBUTTON "Cancel",IDC_DLG_CANCEL,135,110,60,14,WS_TABSTOP
+	EDITTEXT        IDC_DLG_ROW_LIMIT, 5, 112, 35, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_CENTER | ES_NUMBER
+	LTEXT           "Max rows in result output. Use 0  to unlimited.", IDC_DLG_LABEL, 45, 114, 170, 14, SS_LEFT
+
+
+	PUSHBUTTON "OK",IDC_DLG_OK,70,141,60,14,WS_TABSTOP
+    PUSHBUTTON "Cancel",IDC_DLG_CANCEL,135,141,60,14,WS_TABSTOP
 END
 
 
@@ -182,6 +197,25 @@ BEGIN
     PUSHBUTTON      "Cancel", IDC_DLG_CANCEL, 120, 82, 50, 14, 0
 END
 
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_GENERATE_DATA DIALOGEX 50,50,250,300
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
+	CAPTION "Data generator"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT           "Target", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
+    COMBOBOX        IDC_DLG_TABLENAME, 30, 5, 120, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_SORT
+	LTEXT           "Row count", IDC_DLG_LABEL, 165, 7, 40, 14, SS_LEFT
+	EDITTEXT        IDC_DLG_GEN_ROW_COUNT, 205, 5, 40, 12, WS_VISIBLE | WS_BORDER | WS_TABSTOP | WS_CHILD | ES_NUMBER | ES_CENTER | WS_BORDER
+    AUTOCHECKBOX    "Truncate data before generation", IDC_DLG_GEN_ISTRUNCATE, 5, 20, 140, 16, BS_NOTIFY
+	LTEXT           "Column", IDC_DLG_LABEL, 5, 40, 240, 14, SS_LEFT | SS_ETCHEDHORZ
+
+	LTEXT           "", IDC_DLG_GEN_COLUMNS, 5, 45, 240, 280, SS_LEFT | WS_TABSTOP
+
+    PUSHBUTTON      "OK", IDC_DLG_OK, 141, 282, 50, 14, 0
+    PUSHBUTTON      "Cancel", IDC_DLG_CANCEL, 196, 282, 50, 14, 0
+END
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDC_MENU_MAIN MENU
 BEGIN
@@ -215,6 +249,7 @@ BEGIN
         MENUITEM "Import from CSV file", IDM_IMPORT_CSV, GRAYED
         MENUITEM "Export to SQL file", IDM_EXPORT_SQL, GRAYED
         MENUITEM "Export as CSV file", IDM_EXPORT_CSV, GRAYED
+        MENUITEM "Data generator", IDM_GENERATE_DATA, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Integrity check", IDM_CHECK_INTEGRITY, GRAYED
         MENUITEM "Vacuum database", IDM_VACUUM, GRAYED
@@ -243,8 +278,7 @@ IDC_MENU_TABLE MENU
 BEGIN
 	POPUP "Table"
 	BEGIN
-		MENUITEM "Query data", IDM_QUERY_DATA
-		MENUITEM "Edit data", IDM_EDIT_DATA
+		MENUITEM "View", IDM_EDIT_DATA
 		MENUITEM SEPARATOR
 		MENUITEM "Edit", IDM_EDIT
 		MENUITEM "Rename", IDM_RENAME
@@ -268,7 +302,7 @@ IDC_MENU_VIEW MENU
 BEGIN
 	POPUP "View"
 	BEGIN
-		MENUITEM "Query data", IDM_QUERY_DATA
+		MENUITEM "View", IDM_EDIT_DATA
 		MENUITEM SEPARATOR
 		MENUITEM "Rename", IDM_RENAME
 		MENUITEM "Edit", IDM_EDIT
@@ -331,16 +365,24 @@ BEGIN
 	BEGIN
 		MENUITEM "Edit\tEnter", IDM_ROW_EDIT
 		MENUITEM "Delete\tDel", IDM_ROW_DELETE
+		MENUITEM SEPARATOR
+		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
+		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM SEPARATOR
+		MENUITEM "Export to csv", IDM_RESULT_EXPORT
 	END
 END
 
 IDA_ACCEL ACCELERATORS
 BEGIN
 	VK_ESCAPE, IDM_EXIT, ALT, VIRTKEY
+	"X", IDM_EXIT, ALT, VIRTKEY
     "O", IDM_OPEN, CONTROL, VIRTKEY
     "Q", IDM_CLOSE, CONTROL, VIRTKEY
     VK_RETURN, IDM_EXECUTE, CONTROL, VIRTKEY
+    VK_F9, IDM_EXECUTE, VIRTKEY
     VK_RETURN, IDM_PLAN, ALT, VIRTKEY
+    VK_F8, IDM_PLAN, VIRTKEY
     "S", IDM_SAVE, CONTROL, VIRTKEY
     "H", IDM_HISTORY, CONTROL, VIRTKEY
     "G", IDM_GISTS, CONTROL, VIRTKEY
@@ -355,12 +397,16 @@ BEGIN
 	IDS_CREATE_TRIGGER "-- create [TEMP] trigger [if not exists] [schema.]<trigger-name>\n-- {before|after|instead of} {delete|insert|update|update of column1, column2, ...} on <table-name>\n-- when <expression>\n-- begin\n-- <some-statements: use NEW. and OLD. to refs>;\n-- end.\ncreate trigger trg_mytable_insert\nafter insert on mytable\nwhen id > 10\n\nbegin\n  insert into mytable2\n  select NEW.id, NEW.name;\nend;"
 	IDS_ABOUT "Sqlite-gui is a visual tool for SQLite database.\nVisit our homepage to get the source code and latest binaries.\n\nLittle Brother (c) 2020\nlb.im@ya.ru"
 	IDS_TIPS "* To create a new database, enter the desired name in the ""Open"" dialog\n\n" \
+		"* Only the selected part of the query will be executed\n\n"
 		"* During a transaction the special indicator is displayed inside the status bar\n\n" \
 		"* Do you need a new version of sqlite or a standard extension like json1?\n  Just replace sqlite3.dll! 32-bit version is required.\n\n" \
+		"* Hold Ctrl and click on a table name in Editor to view the table data\n\n" \
 		"* Use Tab button to toggle to next result\n\n" \
 		"* Hold Ctrl when click by a cell in Data Edit dialog to edit the value as a multiline text. Use Ctrl + Enter to add new line to text.\n\n" \
 		"* Use Ctrl + Enter to add row in Add row dialog\n\n" \
 		"* SQLite supports a limited subset of ALTER. So there is not GUI allows remove/reorder column to an existing table or something like this.\n\n" \
+		"* Data generator requires series and rownum extensions.\n\n" \
+		"* Add rows to ""generators"" table in prefs.sqlite database to add new types in data generator. You can insert an empty value if the generated value can be null.\n\n" \
 		"Cons\n* BLOB is unsupported\n* Only utf-8 is supported\n* NULL is displayed as an empty string\n* An empty string is set to NULL when data is edit"
 END
 
